force-app/main/default/objects/SFL5_Milestone__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>