force-app/main/default/objects/SFL5_Milestone__c/fields/Invoice_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Received_Date__c</fullName>
    <label>Invoice Received Date</label>
    <type>Date</type>
</CustomField>