force-app/main/default/objects/SFL5_Milestone__c/fields/Issue_Year__c.field-meta.xml
<CustomField>
    <fullName>Issue_Year__c</fullName>
    <description
  >This is the year of the issue concerned for Mag Production projects.</description>
    <formula>Project__r.Issue_Year__c</formula>
    <inlineHelpText
  >This is the year of the issue concerned for Mag Production projects.</inlineHelpText>
    <label>Issue Year</label>
    <type>Text</type>
</CustomField>