force-app/main/default/objects/SFL5_Milestone__c/fields/Milestone_Description__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Description__c</fullName>
    <label>Milestone Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>