force-app/main/default/objects/SFL5_Milestone__c/fields/Production_Step__c.field-meta.xml
<CustomField>
    <fullName>Production_Step__c</fullName>
    <description
  >This field specifies the step of production for a mag production milestone.</description>
    <inlineHelpText
  >This field specifies the step of production for a mag production milestone.</inlineHelpText>
    <label>Production Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Editorial Briefing</fullName>
                <default>true</default>
                <label>Editorial Briefing</label>
            </value>
            <value>
                <fullName>Design Start</fullName>
            </value>
            <value>
                <fullName>Space Close</fullName>
            </value>
            <value>
                <fullName>All Editorial In</fullName>
            </value>
            <value>
                <fullName>Ad PDFs Due</fullName>
            </value>
            <value>
                <fullName>Extended Space Close</fullName>
            </value>
            <value>
                <fullName>Mid Proofs As Needed</fullName>
            </value>
            <value>
                <fullName>All Layout Working</fullName>
            </value>
            <value>
                <fullName>Editorial Close</fullName>
            </value>
            <value>
                <fullName>Bible</fullName>
            </value>
            <value>
                <fullName>Extended Ad PDFs Due</fullName>
            </value>
            <value>
                <fullName>Bonus Distribution Due</fullName>
            </value>
            <value>
                <fullName>To Prepress</fullName>
            </value>
            <value>
                <fullName>Print Order/Mail Tape</fullName>
            </value>
            <value>
                <fullName>Inserts PDFs InSite</fullName>
            </value>
            <value>
                <fullName>Pre Printed Due</fullName>
            </value>
            <value>
                <fullName>COLOR PROOFS</fullName>
            </value>
            <value>
                <fullName>Mag Files InSite</fullName>
            </value>
            <value>
                <fullName>To PRESS</fullName>
            </value>
            <value>
                <fullName>CO MAIL Start</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
            <value>
                <fullName>Approx Home Delivery</fullName>
            </value>
            <value>
                <fullName>Approx Home Delivery - Late</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>