force-app/main/default/objects/SFL5_Milestone__c/recordTypes/Mag_Production.recordType-meta.xml
<RecordType>
    <fullName>Mag_Production</fullName>
    <active>true</active>
    <description
  >This is a milestone used by production personnel and administrators in the production of magazines.</description>
    <label>Mag Production</label>
</RecordType>