force-app/main/default/objects/SFL5_Milestone__c/recordTypes/Mag_Production_EM.recordType-meta.xml
<RecordType>
    <fullName>Mag_Production_EM</fullName>
    <active>true</active>
    <label>Mag Production - EM</label>
</RecordType>