force-app/main/default/objects/SFL5_Milestone__c/recordTypes/Mag_Production_GOV.recordType-meta.xml
<RecordType>
    <fullName>Mag_Production_GOV</fullName>
    <active>true</active>
    <label>Mag Production - GOV</label>
</RecordType>