force-app/main/default/objects/SFL5_Milestone__c/recordTypes/Mag_Production_GT.recordType-meta.xml
<RecordType>
    <fullName>Mag_Production_GT</fullName>
    <active>true</active>
    <label>Mag Production - GT</label>
</RecordType>