force-app/main/default/objects/SFL5_Milestone__c/recordTypes/Mag_Production_PCIO.recordType-meta.xml
<RecordType>
    <fullName>Mag_Production_PCIO</fullName>
    <active>true</active>
    <label>Mag Production - PCIO</label>
</RecordType>